--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,8 @@ h1 {
   background:linear-gradient( 0deg, #27588F, #97CBFF);
 }
 #header {
+  padding-top: 0;
+  padding-bottom: 20px;
  margin-bottom:2em;
 }
 .namegetter {
